--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Fmod/Assets/FMODStudioCache.meta
 Project Innovation/fmod_editor.log
 Project Innovation/fmod_editor.log
 Project Innovation/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+UserSettings/Layouts/default-2021.dwlt
