--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Project Innovation/fmod_editor.log
 Project Innovation/fmod_editor.log
 Project Innovation/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
